testsuite/tests/mdo/should_fail/mdofail002.stderr
mdofail002.hs:10:9: error: [GHC-10498]
    Conflicting definitions for ‘x’
    At: mdofail002.hs:10:9
        mdofail002.hs:11:9

